# ESP-DOS

./: .gitignore  AGENTS.md  CMakeLists.txt  FLASHING.md  README.md  corrupted_lines.txt  partitions.csv  platformio.ini  sdkconfig.defaults
apps/: DEVELOP.md  README.md  command.ld  date.c  df.c  echo.c  edit.c  free.c  hello.c  uname.c
docs/: CHANGELOG.md  hardware.md  keyboard.md
include/: app_sdk.h  config.h  dino.h  display_st7789.h  ds3231.h  editor.h  elf.h  i2c_bus.h  process.h  shell.h  tca8418.h  terminal.h  vfs.h
include/fonts/: elf_date.h  elf_df.h  elf_echo.h  elf_edit.h  elf_free.h  elf_hello.h  elf_uname.h  font_6x12.h  font_cn_12x12.h
kernel/: CMakeLists.txt  dino.c  display_st7789.c  ds3231.c  editor.c  elf_loader.c  i2c_bus.c  main.c  process.c  shell.c  shell_clean.c  tca8418.c  terminal.c  vfs.c
tools/: apply_dos_changes.py  bdf_data.py  build_all.py  build_apps.py  check_chinese.py  find_bad.py  fix_chinese.py  fix_chinese2.py  gen_flash_image.py  genfont.py  list_corrupt.py  run_qemu.ps1
wokwi/: diagram.json  platformio.ini  prepare_wokwi.py
