idf_component_register(
    SRCS
        "main.c"
        "display_st7789.c"
        "terminal.c"
        "vfs.c"
        "shell.c"
        "elf_loader.c"
        "process.c"
        "tca8418.c"
        "ds3231.c"
        "i2c_bus.c"
    INCLUDE_DIRS
        "."
        "../include"
    REQUIRES
        driver
        spiffs
)
